--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="description" content="My First Web Page, with JavaScript">
     <meta name="keywords" content="immaculata, ics2o">
-    <meta name="author" content="Ms Raffin">
+    <meta name="author" content="Ioana">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
 		<!-- Favicon -->
